# dppo

./: README.md  pyproject.toml
agent/finetune/: train_ppo_diffusion_agent.py
agent/pretrain/: train_agent.py  train_diffusion_agent.py  train_gaussian_agent.py
cfg/: pretraining.md
cfg/d3il/eval/avoid_m1/: eval_diffusion_mlp.yaml
cfg/d3il/pretrain/avoid_m1/: pre_diffusion_mlp.yaml  pre_gaussian_mlp.yaml  pre_gmm_mlp.yaml
cfg/d3il/pretrain/avoid_m2/: pre_diffusion_mlp.yaml  pre_gaussian_mlp.yaml  pre_gmm_mlp.yaml
cfg/d3il/pretrain/avoid_m3/: pre_diffusion_mlp.yaml  pre_gaussian_mlp.yaml  pre_gmm_mlp.yaml
cfg/furniture/eval/lamp_low/: eval_diffusion_mlp.yaml  eval_diffusion_unet.yaml
cfg/furniture/eval/one_leg_low/: eval_diffusion_mlp.yaml  eval_diffusion_unet.yaml
cfg/furniture/eval/round_table_low/: eval_diffusion_mlp.yaml  eval_diffusion_unet.yaml
cfg/furniture/pretrain/lamp_low/: pre_diffusion_mlp.yaml  pre_diffusion_unet.yaml  pre_gaussian_mlp.yaml
cfg/furniture/pretrain/lamp_med/: pre_diffusion_mlp.yaml  pre_diffusion_unet.yaml  pre_gaussian_mlp.yaml
cfg/furniture/pretrain/one_leg_low/: pre_diffusion_mlp.yaml  pre_diffusion_unet.yaml  pre_gaussian_mlp.yaml
cfg/furniture/pretrain/one_leg_med/: pre_diffusion_mlp.yaml  pre_diffusion_unet.yaml  pre_gaussian_mlp.yaml
cfg/gym/scratch/: ant-v4.yaml  halfcheetah-v4.yaml  hopper-v4.yaml  humanoid-v4.yaml  invertedpendulum-v4.yaml  reacher-v4.yaml  walker-v4.yaml
env/gym_utils/: __init__.py
env/gym_utils/wrapper/: mujoco_locomotion_lowdim.py
script/: download_url.py  run.py
(+98 files in other folders)
