[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dppo"
version = "0.7.0"
description = "Fine-tuning diffusion policies with PPO."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "av",
    "einops",
    "gdown",
    "gym",
    "hydra-core",
    "imageio",
    "matplotlib",
    "omegaconf",
    "pretty_errors",
    "torch",
    "tqdm",
    "wandb"
]

[project.optional-dependencies]


[project.urls]
Homepage = "https://diffusion-ppo.github.io/"

[tool.setuptools.packages.find]
exclude = []

[tool.wheel]
exclude = []
